получение профиля без idэ
