# pkg/handler/handler.go
@@ -40,7 +40,7 @@ func (h *Handler) InitRoutes(wsHandler *service.HandlerWS) *gin.Engine {
 		{
 			profile.POST("/create_profile", h.createProfile)
 			profile.PUT("/edit_profile/:prof_id", h.editProfile)
-			profile.GET("/get_profile/:prof_id", h.getProfile)
+			profile.GET("/get_profile", h.getProfile)
 			profile.PUT("/upload_avatar", h.uploadAvatar)
 
 			hobby := profile.Group(":prof_id/hobby")
